--- a/ios/Podfile
+++ b/ios/Podfile
@@ -3,7 +3,7 @@ require_relative '../node_modules/@react-native-community/cli-platform-ios/nativ
 
 platform :ios, '11.0'
 
-target 'myviroapp' do
+target 'digitalgrillar' do
   config = use_native_modules!
 
   use_react_native!(
@@ -14,8 +14,9 @@ target 'myviroapp' do
 
   pod 'ViroReact', :path => '../node_modules/@viro-community/react-viro/ios/'
   pod 'ViroKit_static_lib', :path => '../node_modules/@viro-community/react-viro/ios/dist/ViroRenderer/static_lib'
+  # pod 'FirebaseCoreDiagnostics', '1.4.0'
 
-  target 'myviroappTests' do
+  target 'digitalgrillarTests' do
     inherit! :complete
     # Pods for testing
   end
