--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "myviroapp",
+  "name": "digitalgrillar",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,10 +10,25 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.8.5",
+    "@react-native-async-storage/async-storage": "^1.15.14",
+    "@react-native-firebase/app": "^13.1.0",
+    "@react-native-firebase/auth": "^13.1.0",
+    "@react-native-firebase/firestore": "^13.1.0",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native-stack": "^6.2.5",
     "@viro-community/react-viro": "^2.20.2",
     "fsevents": "^2.3.2",
+    "native-base": "^3.2.2",
     "react": "17.0.2",
-    "react-native": "0.65.1"
+    "react-hook-form": "^7.21.2",
+    "react-native": "0.65.1",
+    "react-native-bootsplash": "^4.0.2",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.10.1",
+    "react-native-svg": "^12.1.1",
+    "react-native-vector-icons": "^9.0.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
